; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_editor.c_up.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_editor.c_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_n = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @up(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @_n, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @_n, align 4
  %6 = icmp sgt i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @_n, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* @_n, align 4
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @setnewline(i32 %11)
  ret i32 -1
}

declare dso_local i32 @setnewline(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
